--- a/src/Footer.css
+++ b/src/Footer.css
@@ -6,7 +6,7 @@ footer {
   
   footer p {
     text-align: center;
-    color: #31bddd;
+    color: #00fbff;
     transition: all 0.3s;
     font-size: 12pt;
   }
