--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #808080;
+  background-color: #d5a790;
   min-height: 90vh;
   /* box-sizing: border-box; */
   display: flex;
