--- a/src/App.css
+++ b/src/App.css
@@ -122,3 +122,11 @@ li:hover{
   cursor: pointer;
   transform: scale(1.06);
 }
+
+@media(max-width:786px){
+
+  .heading h1{
+    margin-top: 5px;
+  }
+
+}
